--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Panthera Store  Api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,10 @@
   },
   "homepage": "https://github.com/SamsonAyodele/PantheraApi#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
